--- a/swa.dsl.courses/HTML Stuff/style.css
+++ b/swa.dsl.courses/HTML Stuff/style.css
@@ -15,6 +15,10 @@ h1 {
 	margin-top: 3vh;
 	margin-bottom: 5vh;
 }
+h2 {
+	width: 100%;
+	text-align: center;
+}
 
 .table {
 	display: flex;
@@ -80,4 +84,36 @@ h1 {
 	display: flex;
 	flex-flow: row;
 	justify-content: space-between;
+}
+
+#popup {
+	display: flex;
+	flex-flow: column;
+	justify-content: space-around;
+	height: 100vh;
+}
+.box {
+	padding: 3vw;
+	border: 1vh solid black;
+	border-radius: 3vh;
+	display: flex;
+	flex-flow: column;
+	justify-content: flex-start;
+}
+
+.row {
+	display: flex;
+	flex-flow: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.name {
+	padding: 1vh;
+}
+
+.hCenter {
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+	width: 100vw;
 }
